<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity"
    android:background="@color/base_app"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:animateLayoutChanges="true"
            android:id="@+id/image_logo"
            android:padding="10dp"
            android:background="@drawable/bordure_white_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo_rakibolana"/>
        </LinearLayout>
        <TextView
            android:animateLayoutChanges="true"
            android:id="@+id/app_title"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:textSize="25dp"
            android:paddingTop="20dp"
            android:paddingBottom="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"/>

        <TextView
            android:animateLayoutChanges="true"
            android:id="@+id/proverbe"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:layout_margin="0dp"
            android:textSize="15dp"
            android:paddingTop="0dp"
            android:paddingBottom="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proverbe"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_app"/>

        <TextView
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creator"/>

    </LinearLayout>




    

</LinearLayout>