<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/base_app">
            <TextView
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textSize="30dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"/>

            <TextView
                android:id="@+id/word_number"
                android:layout_marginTop="20dp"
                android:textSize="15dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/word_number"/>

            <EditText
                android:textColor="@color/black"
                android:hint="Teny ho tadiavina"
                android:paddingLeft="10dp"
                android:drawableLeft="@drawable/ic_baseline_search_24"
                android:background="@drawable/bordure_white"
                android:layout_margin="20dp"
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

            <TextView
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:textSize="15dp"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/todays_word"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_weight="6"
            android:layout_width="match_parent"
            android:layout_height="0dp">
            <View
                android:background="@color/base_app"
                android:layout_width="match_parent"
                android:layout_height="20dp"/>
            <RelativeLayout
                android:background="@drawable/bordure_champagne"
                android:layout_marginTop="-20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:paddingBottom="20dp"
                    android:paddingTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/random_word"
                        android:textSize="25dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tsara"
                        android:textColor="@color/black"
                        android:textAlignment="center"/>

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:padding="15dp"
                            android:src="@drawable/ic_baseline_content_copy_24"
                            android:background="@drawable/bordure_white"
                            android:layout_margin="5dp"
                            android:layout_width="60dp"
                            android:layout_height="60dp"/>
                        <ImageView
                            android:padding="15dp"
                            android:src="@drawable/ic_baseline_bookmark_add_24"
                            android:background="@drawable/bordure_white"
                            android:layout_margin="5dp"
                            android:layout_width="60dp"
                            android:layout_height="60dp"/>

                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/meanings"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <View
                    android:background="@color/base_app"
                    android:layout_marginLeft="20dp"
                    android:layout_width="80dp"
                    android:layout_height="2dp"/>

                <TextView
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/definition"
                    android:text="Hello"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</FrameLayout>